--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
+  /* border: 1px solid black; */
+  box-sizing: border-box;
+}
+.react-tel-input .form-control {
+  @apply !w-full py-4 !text-base;
+}
+.otp-container{
+  @apply flex justify-between gap-2 ;
+}
+.otp-container input{
+  @apply !mr-1 flex-1 py-4 outline-none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
